prisma e postgres tirados

--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
 # Environment variables for local development
 
-# PostgreSQL connection string
-DATABASE_URL="postgresql://postgres:postgres@localhost:5432/appdb?schema=public"
+# AWS DynamoDB Configuration
+AWS_REGION=us-east-1
+AWS_ACCESS_KEY_ID=your-access-key-id
+AWS_SECRET_ACCESS_KEY=your-secret-access-key
+DYNAMODB_TABLE_NAME=Client
