--- a/package.json
+++ b/package.json
@@ -8,31 +8,29 @@
     "start": "next start -p 3000",
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
-    "test": "cross-env NODE_ENV=test jest --runInBand",
-    "migrate": "prisma migrate dev",
-    "seed": "ts-node prisma/seed.ts"
+    "test": "cross-env NODE_ENV=test jest --runInBand"
   },
   "dependencies": {
-    "@prisma/client": "^5.7.1",
+    "@aws-sdk/client-dynamodb": "^3.902.0",
+    "@aws-sdk/lib-dynamodb": "^3.902.0",
     "next": "14.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "zod": "3.22.4"
   },
   "devDependencies": {
+    "@types/express": "4.17.21",
     "@types/jest": "29.5.3",
     "@types/node": "20.10.1",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "@types/supertest": "2.0.12",
     "cross-env": "7.0.3",
+    "express": "4.18.2",
     "jest": "29.7.0",
-    "prisma": "^5.7.1",
     "supertest": "6.3.3",
     "ts-jest": "29.1.1",
     "ts-node": "10.9.2",
-    "typescript": "5.3.3",
-    "express": "4.18.2",
-    "@types/express": "4.17.21"
+    "typescript": "5.3.3"
   }
 }
