--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,8 @@ AWS_SECRET_ACCESS_KEY=your_secret_access_key
 
 # DynamoDB Configuration
 DYNAMODB_TABLE_NAME=Client
+
+# JWT / IdP
+JWT_ISSUER=https://example.auth0.com/
+JWT_AUDIENCE=urn:my-api
+JWKS_URI=https://example.auth0.com/.well-known/jwks.json
