--- a/infra/Docker/docker-compose.yml
+++ b/infra/Docker/docker-compose.yml
@@ -13,3 +13,21 @@ services:
     ports:
       - "3000:3000"
     command: npm run start
+  
+  mock-jwks:
+    build:
+    image: node:18
+    volumes:
+      - ./tests/mock-jwks-server.ts:/app/mock-jwks-server.ts
+      - ./package.json:/app/package.json
+      - ./node_modules:/app/node_modules
+    working_dir: /app
+    command: ["node", "mock-jwks-server.ts"]
+    ports:
+      - "8001:8001"
+
+  web:
+    environment:
+      - JWKS_URI=http://mock-jwks:8001/.well-known/jwks.json
+      - JWT_ISSUER=http://test-issuer
+      - JWT_AUDIENCE=test-aud
