--- a/package.json
+++ b/package.json
@@ -8,19 +8,24 @@
     "start": "next start -p 3000",
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
-    "test": "cross-env NODE_ENV=test jest --runInBand"
+    "test": "cross-env NODE_ENV=test jest --runInBand",
+    "docs:build": "ts-node src/lib/swagger.ts"
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.902.0",
     "@aws-sdk/lib-dynamodb": "^3.902.0",
+    "jose": "^6.1.0",
     "next": "14.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "zod": "3.22.4"
   },
   "devDependencies": {
     "@types/express": "4.17.21",
     "@types/jest": "29.5.3",
+    "@types/nock": "^11.1.0",
     "@types/node": "20.10.1",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
@@ -28,6 +33,7 @@
     "cross-env": "7.0.3",
     "express": "4.18.2",
     "jest": "29.7.0",
+    "nock": "^14.0.10",
     "supertest": "6.3.3",
     "ts-jest": "29.1.1",
     "ts-node": "10.9.2",
