--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@aws-sdk/lib-dynamodb": "^3.902.0",
     "jose": "^6.1.0",
     "next": "14.0.4",
+    "node-fetch": "^3.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "swagger-jsdoc": "^6.2.8",
