--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,10 @@ jobs:
         ports:
           - '8000:8000'
         options: >-
-          -jar DynamoDBLocal.jar -inMemory -sharedDb
+          --health-cmd "curl -f http://localhost:8000/shell/ || exit 1"
+          --health-interval 5s
+          --health-retries 10
+          --health-timeout 5s
 
     env:
       DATABASE_URL: ""
