--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,11 +12,12 @@ jobs:
         image: amazon/dynamodb-local
         ports:
           - '8000:8000'
-        options: >-
-          --health-cmd "curl -f http://localhost:8000/ || exit 1"
-          --health-interval 5s
-          --health-retries 10
-          --health-timeout 5s
+        options: >
+          --health-cmd="aws dynamodb list-tables --endpoint-url http://localhost:8000 || exit 1"
+          --health-interval=10s
+          --health-retries=5
+          --health-timeout=5s
+          --start-period=10s
 
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -25,8 +26,8 @@ jobs:
       JWT_AUDIENCE: ${{ secrets.JWT_AUDIENCE }}
       JWKS_URI: ${{ secrets.JWKS_URI }}
       NODE_ENV: test
-      TABLE_NAME: Client   # (se teu app espera)
-      AWS_REGION: us-east-1          # ✅ se teu código usa
+      TABLE_NAME: Client
+      AWS_REGION: us-east-1
 
     steps:
       - uses: actions/checkout@v4
