--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,11 +13,11 @@ jobs:
         ports:
           - '8000:8000'
         options: >
-          --health-cmd="aws dynamodb list-tables --endpoint-url http://localhost:8000 || exit 1"
-          --health-interval=10s
-          --health-retries=5
+          --health-cmd="curl -f http://localhost:8000/shell/ || exit 1"
+          --health-interval=5s
+          --health-retries=10
           --health-timeout=5s
-          --start-period=10s
+          --start-period=5s
 
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
