--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,11 +9,14 @@ jobs:
     runs-on: ubuntu-latest
     services:
       dynamodb:
-        image: amazon/dynamodb-local
+        image: amazon/dynamodb-local:latest
         ports:
           - 8000:8000
-      options: >-
-        --health-cmd="curl -f http://localhost:8000/shell/ || exit 1" --health-interval=5s --health-retries=10 --health-timeout=5s
+        options: >-
+          --health-cmd "curl -f http://localhost:8000/shell/ || exit 1"
+          --health-interval 10s
+          --health-retries 5
+          --health-timeout 5s
 
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
