--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
         ports:
           - 8000:8000
         options: >-
-          --health-cmd "curl -f http://localhost:8000/shell/ || exit 1"
+          --health-cmd "aws dynamodb list-tables --endpoint-url http://localhost:8000 >/dev/null 2>&1 || exit 1"
           --health-interval 10s
           --health-retries 5
           --health-timeout 5s
