--- a/infra/Docker/docker-compose.yml
+++ b/infra/Docker/docker-compose.yml
@@ -31,3 +31,11 @@ services:
       - JWKS_URI=http://mock-jwks:8001/.well-known/jwks.json
       - JWT_ISSUER=http://test-issuer
       - JWT_AUDIENCE=test-aud
+
+  dynamodb:
+    build:
+    image: amazon/dynamodb-local:latest
+    ports:
+      - 8000:8000
+    command: "-jar DynamoDBLocal.jar -sharedDb"
+  
