--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,7 @@ jobs:
         with:
           node-version: 20
 
+      - run: docker-compose up
       - run: npm ci
       - run: npm run lint
       - run: npm run typecheck
