--- a/package.json
+++ b/package.json
@@ -26,11 +26,14 @@
   "devDependencies": {
     "@types/express": "4.17.21",
     "@types/jest": "29.5.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/nock": "^11.1.0",
     "@types/node": "20.10.1",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "@types/supertest": "2.0.12",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "cross-env": "7.0.3",
     "express": "4.18.2",
     "jest": "29.7.0",
