--- a/infra/Docker/docker-compose.yml
+++ b/infra/Docker/docker-compose.yml
@@ -36,5 +36,7 @@ services:
     image: amazon/dynamodb-local:latest
     ports:
       - 8000:8000
-    command: "-jar DynamoDBLocal.jar -sharedDb"
+    command: "-jar DynamoDBLocal.jar -sharedDb -dbPath /home/dynamodblocal/data"
+    volumes:
+      - ./dynamodb_data:/home/dynamodblocal/data
   
