--- a/infra/Docker/docker-compose.yml
+++ b/infra/Docker/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.9'
-
 services:
   app:
     build: .
@@ -26,6 +24,7 @@ services:
       - "8001:8001"
 
   web:
+    image: alpine
     environment:
       - JWKS_URI=http://mock-jwks:8001/.well-known/jwks.json
       - JWT_ISSUER=http://test-issuer
