--- a/infra/Docker/Dockerfile
+++ b/infra/Docker/Dockerfile
@@ -1,8 +1,8 @@
 ## Multi‑stage Dockerfile for production deployments
 FROM node:20-alpine AS deps
 WORKDIR /app
-COPY package*.json ./
-RUN npm install
+COPY package.json package-lock.json ./
+RUN npm ci --omit=dev
 
 FROM node:20-alpine AS builder
 WORKDIR /app
