--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,35 +1,34 @@
-name: Deploy to AWS EC2 via ECR
+name: CI/CD Deploy to EC2 via SSH
 
 on:
   push:
     branches:
-      - '**'
-    paths:
-      - 'src/**'
-      - 'Dockerfile'
-      - '.github/workflows/deploy.yaml'
+      - main
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: 🔁 Checkout do código
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: 🔐 Configurar credenciais da AWS
+      - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
+          aws-region: us-east-1
 
-      - name: 🧱 Fazer login no ECR
+      - name: Login to Amazon ECR
+        uses: aws-actions/amazon-ecr-login@v2
+
+      - name: Build Docker image
         run: |
-          aws ecr get-login-password --region ${{ secrets.AWS_REGION }} | \
-          docker login --username AWS --password-stdin ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com
+          docker build -t cs20252 .
+          docker tag cs20252:latest ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.us-east-1.amazonaws.com/cs20252:latest
 
-      - name: 🛠️ Build da imagem Docker
+      - name: Push Docker image to ECR
         run: |
           docker build -t cs2025af:${{ github.sha }} -t cs2025af:latest .
 
