--- a/infra/Docker/Dockerfile
+++ b/infra/Docker/Dockerfile
@@ -8,10 +8,8 @@ FROM node:20-alpine AS builder
 WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
 
-# ✅ Copiar apenas o necessário — isso evita erro em produção
 COPY package*.json ./
-COPY tsconfig.json next.config.mjs ./
-COPY public ./public
+COPY tsconfig.json ./
 COPY src ./src
 
 RUN npm run build
@@ -19,11 +17,9 @@ RUN npm run build
 FROM node:20-alpine AS runner
 WORKDIR /app
 ENV NODE_ENV=production
-
 COPY --from=builder /app/.next ./.next
 COPY --from=builder /app/node_modules ./node_modules
 COPY --from=builder /app/package*.json ./
-COPY --from=builder /app/public ./public
 
 EXPOSE 3000
-CMD ["npm", "start"]
+CMD ["npm","start"]
