--- a/infra/Docker/Dockerfile
+++ b/infra/Docker/Dockerfile
@@ -1,17 +1,13 @@
-## Multi-stage Dockerfile for production deployments
+## Multi‑stage Dockerfile for production deployments
 FROM node:20-alpine AS deps
 WORKDIR /app
-COPY package*.json ./
+COPY package.json package-lock.json ./
 RUN npm ci --omit=dev
 
 FROM node:20-alpine AS builder
 WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
-
-COPY package*.json ./
-COPY tsconfig.json ./
-COPY src ./src
-
+COPY . .
 RUN npm run build
 
 FROM node:20-alpine AS runner
@@ -20,6 +16,6 @@ ENV NODE_ENV=production
 COPY --from=builder /app/.next ./.next
 COPY --from=builder /app/node_modules ./node_modules
 COPY --from=builder /app/package*.json ./
-
+COPY --from=builder /app/public ./public
 EXPOSE 3000
 CMD ["npm","start"]
