--- a/infra/Docker/Dockerfile
+++ b/infra/Docker/Dockerfile
@@ -1,4 +1,4 @@
-## Multi‑stage Dockerfile for production deployments
+## Multi-stage Dockerfile for production deployments
 FROM node:20-alpine AS deps
 WORKDIR /app
 COPY package.json package-lock.json ./
@@ -16,6 +16,5 @@ ENV NODE_ENV=production
 COPY --from=builder /app/.next ./.next
 COPY --from=builder /app/node_modules ./node_modules
 COPY --from=builder /app/package*.json ./
-COPY --from=builder /app/public ./public
 EXPOSE 3000
 CMD ["npm","start"]
