--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "zod": "3.22.4"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.28.5",
     "@types/express": "4.17.21",
     "@types/jest": "29.5.3",
     "@types/jsonwebtoken": "^9.0.10",
@@ -35,6 +36,7 @@
     "@types/supertest": "2.0.12",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
+    "babel-jest": "^30.2.0",
     "cross-env": "7.0.3",
     "express": "4.18.2",
     "jest": "29.7.0",
