--- a/package.json
+++ b/package.json
@@ -45,5 +45,7 @@
     "ts-jest": "29.1.1",
     "ts-node": "10.9.2",
     "typescript": "5.3.3"
+    ,"js-yaml": "4.1.0"
+    ,"@types/js-yaml": "4.0.5"
   }
 }
