--- a/.gitignore
+++ b/.gitignore
@@ -2,28 +2,56 @@
 node_modules/
 /.pnp
 .pnp.js
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
+
+# Backend
+backend/dist/
+backend/.env
+backend/coverage/
+
+# Frontend
+/.next/
+/out/
+frontend/.next/
+frontend/out/
+frontend/build/
+frontend/.env.local
+frontend/.env.development.local
+frontend/.env.test.local
+frontend/.env.production.local
 
 # Testing
 /coverage
-
-# Next.js
-/.next/
-/out/
+coverage/
+.nyc_output/
 
 # Production
 /build
 
-# Misc
-.DS_Store
-*.pem
-
-# Debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Local env files
+# Environment variables
+.env
 .env*.local
+
+# Logs
+logs/
+*.log
+
+# IDEs
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
+*.pem
 
 # Vercel
 .vercel
@@ -37,45 +65,26 @@ next-env.d.ts
 *.tfstate
 *.tfstate.*
 .terraform.lock.hcl
-
-# Crash log files
-crash.log
-crash.*.log
-
-# Exclude all .tfvars files, which are likely to contain sentitive data
 *.tfvars
 *.tfvars.json
-
-# Ignore override files as they are usually used to override resources locally
 override.tf
 override.tf.json
 *_override.tf
 *_override.tf.json
-
-# Include override files you do wish to add to version control using negated pattern
 !example_override.tf
-
-# Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
 *tfplan*
-
-# Prisma
-prisma/migrations/
-*.db
-*.db-journal
-
-# IDE
-.vscode/
-.idea/
-
-# OS
-.DS_Store
-Thumbs.db
 
 # Docker
 docker-compose.override.yml
 docker-compose.local.yml
 .docker/
 *.tar
+docker/dynamodb/data/
+
+# Prisma
+prisma/migrations/
+*.db
+*.db-journal
 
 # AWS credentials
 .aws/
