--- a/package.json
+++ b/package.json
@@ -1,51 +1,23 @@
 {
-  "name": "sprint0-app",
+  "name": "sprint0-monorepo",
   "version": "1.0.0",
   "private": true,
+  "description": "Monorepo para backend e frontend do Sprint 0",
   "scripts": {
-    "dev": "next dev -p 3000",
-    "build": "next build",
-    "start": "next start -p 3000",
-    "lint": "next lint",
-    "typecheck": "tsc --noEmit",
-    "test": "cross-env NODE_ENV=test jest --runInBand",
-  "docs:build": "node scripts/generate-swagger.cjs"
-  },
-  "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.902.0",
-    "@aws-sdk/lib-dynamodb": "^3.902.0",
-    "dotenv": "^17.2.3",
-    "jose": "^6.1.0",
-    "next": "14.0.4",
-    "node-fetch": "^3.3.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1",
-    "zod": "3.22.4"
+    "install:all": "cd backend && npm install && cd ../frontend && npm install",
+    "dev:backend": "cd backend && npm run dev",
+    "dev:frontend": "cd frontend && npm run dev",
+    "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
+    "build:backend": "cd backend && npm run build",
+    "build:frontend": "cd frontend && npm run build",
+    "build": "npm run build:backend && npm run build:frontend",
+    "test:backend": "cd backend && npm test",
+    "docker:up": "docker-compose up -d",
+    "docker:down": "docker-compose down",
+    "docker:logs": "docker-compose logs -f",
+    "docs:build": "node scripts/generate-swagger.cjs"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.28.5",
-    "@types/express": "4.17.21",
-    "@types/jest": "29.5.3",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/nock": "^11.1.0",
-    "@types/node": "20.10.1",
-    "@types/react": "18.2.20",
-    "@types/react-dom": "18.2.7",
-    "@types/supertest": "2.0.12",
-    "@types/swagger-jsdoc": "^6.0.4",
-    "@types/swagger-ui-express": "^4.1.8",
-  "babel-jest": "^29.7.0",
-    "cross-env": "7.0.3",
-    "express": "4.18.2",
-    "jest": "29.7.0",
-    "nock": "^14.0.10",
-    "supertest": "6.3.3",
-    "ts-jest": "29.1.1",
-    "ts-node": "10.9.2",
-    "typescript": "5.3.3"
-    ,"js-yaml": "4.1.0"
-    ,"@types/js-yaml": "4.0.5"
+    "concurrently": "^8.2.0"
   }
 }
