n aguento mais o semestre

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 AWS_REGION=us-east-1
 AWS_ACCESS_KEY_ID=your_access_key_id
 AWS_SECRET_ACCESS_KEY=your_secret_access_key
-DYNAMODB_TABLE_NAME=Client
+DYNAMODB_TABLE_NAME=Pet
 JWT_ISSUER=https://example.auth0.com/
 JWT_AUDIENCE=urn:my-api
 JWKS_URI=https://example.auth0.com/.well-known/jwks.json
