--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
       JWT_AUDIENCE: ${{ secrets.JWT_AUDIENCE }}
       JWKS_URI: ${{ secrets.JWKS_URI }}
       NODE_ENV: test
-      DYNAMODB_TABLE_NAME: Client
+      DYNAMODB_TABLE_NAME: Pet
       AWS_REGION: us-east-1
 
     steps:
