--- a/infra/Terraform/.env
+++ b/infra/Terraform/.env
@@ -1,7 +1,7 @@
 AWS_REGION=us-east-1
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
-DYNAMODB_TABLE_NAME=Client
+DYNAMODB_TABLE_NAME=Pet
 JWT_ISSUER=https://cognito-idp.us-east-1.amazonaws.com/us-east-1_qSdTPxWpV
 JWT_AUDIENCE=https://api.cs20252
 JWKS_URI=https://cognito-idp.us-east-1.amazonaws.com/us-east-1_qSdTPxWpV/.well-known/jwks.json
