--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
       "dom.iterable",
       "ES2020"
     ],
+    "types": ["jest", "node"],
     "allowJs": false,
     "skipLibCheck": true,
     "strict": true,
@@ -38,6 +39,7 @@
     ".next/types/**/*.ts"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "jest.setup.ts"
   ]
 }
