--- a/infra/Terraform/.env
+++ b/infra/Terraform/.env
@@ -2,6 +2,8 @@ AWS_REGION=us-east-1
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 DYNAMODB_TABLE_NAME=Pet
-JWT_ISSUER=https://cognito-idp.us-east-1.amazonaws.com/us-east-1_qSdTPxWpV
+DYNAMODB_OWNER_TABLE_NAME=Owner
+DYNAMODB_APPOINTMENT_TABLE_NAME=Appointment
+JWT_ISSUER=https://cognito-idp.us-east-1.amazonaws.com/us-east-1_Jx1uhV01k
 JWT_AUDIENCE=https://api.cs20252
-JWKS_URI=https://cognito-idp.us-east-1.amazonaws.com/us-east-1_qSdTPxWpV/.well-known/jwks.json
+JWKS_URI=https://cognito-idp.us-east-1.amazonaws.com/us-east-1_Jx1uhV01k/.well-known/jwks.json
