--- a/backend/.env.example
+++ b/backend/.env.example
@@ -11,7 +11,11 @@ AWS_SECRET_ACCESS_KEY=test
 
 # DynamoDB
 DYNAMODB_ENDPOINT=http://localhost:8000
-DYNAMODB_TABLE_NAME=users
+DYNAMODB_TABLE_NAME=Pet
+DYNAMODB_OWNER_TABLE_NAME=Owner
+DYNAMODB_APPOINTMENT_TABLE_NAME=Appointment
 
 # JWT Authentication
 JWKS_URI=https://your-auth-provider.com/.well-known/jwks.json
+JWT_ISSUER=https://your-auth-provider.com
+JWT_AUDIENCE=your-api-audience
