--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,6 @@
       "dom.iterable",
       "ES2020"
     ],
-    "types": ["jest", "node"],
     "allowJs": false,
     "skipLibCheck": true,
     "strict": true,
@@ -40,6 +39,8 @@
   ],
   "exclude": [
     "node_modules",
+    "backend",
+    "infra",
     "jest.setup.ts"
   ]
 }
