--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,4 +1,11 @@
 # Frontend Environment Variables
 
 # API URL
+# Local development
 NEXT_PUBLIC_API_URL=http://localhost:3001/api/v1
+
+# Production (uncomment for production build)
+# NEXT_PUBLIC_API_URL=https://meuspets.com/api/v1
+
+# Docker environment
+# NEXT_PUBLIC_API_URL=http://backend:3001/api/v1
