--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "@babel/preset-env": "^7.28.5",
     "@types/express": "4.17.21",
     "@types/jest": "29.5.3",
+    "@types/js-yaml": "4.0.5",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/nock": "^11.1.0",
     "@types/node": "20.10.1",
@@ -36,12 +37,11 @@
     "babel-jest": "^29.7.0",
     "cross-env": "7.0.3",
     "jest": "29.7.0",
+    "js-yaml": "^4.1.1",
     "nock": "^14.0.10",
     "supertest": "6.3.3",
     "ts-jest": "29.1.1",
     "ts-node": "10.9.2",
-    "typescript": "5.3.3",
-    "js-yaml": "4.1.0",
-    "@types/js-yaml": "4.0.5"
+    "typescript": "5.3.3"
   }
 }
