--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
     "@types/jest": "^30.0.0",
     "@types/node": "^24.10.1",
     "concurrently": "^8.2.0"
+  },
+  "dependencies": {
+    "js-yaml": "^4.1.1",
+    "swagger-jsdoc": "^6.2.8"
   }
 }
