--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,72 +1,44 @@
-name: CI/CD Deploy to EC2 via SSH
+name: Deploy
 
 on:
   push:
     branches:
       - main
+      - develop
+      - feVersaoFinal
 
 jobs:
-  deploy:
+  deploy-ecr:
     runs-on: ubuntu-latest
-
+    
+    permissions:
+      id-token: write
+      contents: read
+    
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
+      - uses: actions/checkout@v4
+      
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
-
+      
       - name: Login to Amazon ECR
+        id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
-
-      - name: Build Docker image
+      
+      - name: Build, tag, and push image to Amazon ECR
+        env:
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY_NAME }}
+          IMAGE_TAG: ${{ github.sha }}
         run: |
-          docker build -t cs20252 .
-          docker tag cs20252:latest ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.us-east-1.amazonaws.com/cs20252:latest
-
-      - name: Push Docker image to ECR
-        run: |
-          docker build -t cs2025af:${{ github.sha }} -t cs2025af:latest .
-
-      - name: 🏷️ Tag e Push para ECR
-        run: |
-          docker tag cs2025af:latest ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/cs2025af:${{ github.sha }}
-          docker tag cs2025af:latest ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/cs2025af:latest
-          docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/cs2025af:${{ github.sha }}
-          docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/cs2025af:latest
-
-      - name: 🚀 Conectar via SSH na EC2 e atualizar container
-        uses: appleboy/ssh-action@v1.0.3
-        with:
-          host: ${{ secrets.EC2_PUBLIC_IP }}
-          username: ubuntu
-          key: ${{ secrets.EC2_SSH_KEY }}
-          script: |
-            echo "✅ Conectado na EC2, atualizando container..."
-            
-            # Login no ECR dentro da EC2
-            aws ecr get-login-password --region ${{ secrets.AWS_REGION }} | \
-            docker login --username AWS --password-stdin ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com
-
-            # Parar container antigo (se existir)
-            docker stop cs2025-container || true
-            docker rm cs2025-container || true
-
-            # Puxar imagem da versão atual (tag do commit)
-            docker pull ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/cs2025af:${{ github.sha }}
-
-            # Subir container atualizado
-            docker run -d --name cs2025-container -p 3000:3000 \
-              -e AWS_REGION=${{ secrets.AWS_REGION }} \
-              -e DYNAMODB_TABLE_NAME=${{ secrets.DYNAMODB_TABLE_NAME }} \
-              -e NODE_ENV=production \
-              ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/cs2025af:${{ github.sha }}
-
-            echo "✅ Deploy concluído com sucesso!"
-            echo "🔗 Link de login Cognito:"
-            echo "https://${{ secrets.COGNITO_DOMAIN }}.auth.${{ secrets.AWS_REGION }}.amazoncognito.com/login?client_id=${{ secrets.COGNITO_CLIENT_ID }}&response_type=code&scope=openid&redirect_uri=${{ secrets.COGNITO_CALLBACK_URL }}"
-
+          docker build -f infra/Docker/Dockerfile -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+          docker tag $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG $ECR_REGISTRY/$ECR_REPOSITORY:latest
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
+      
+      - name: Image digest
+        run: echo "Image pushed with SHA ${{ github.sha }}"
