--- a/infra/Terraform/.env
+++ b/infra/Terraform/.env
@@ -2,6 +2,6 @@ AWS_REGION=us-east-1
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 DYNAMODB_TABLE_NAME=Client
-JWT_ISSUER=https://cognito-idp.us-east-1.amazonaws.com/us-east-1_qSdTPxWpV
+JWT_ISSUER=https://cognito-idp.us-east-1.amazonaws.com/us-east-1_U5Zsm3Kwa
 JWT_AUDIENCE=https://api.cs20252
-JWKS_URI=https://cognito-idp.us-east-1.amazonaws.com/us-east-1_qSdTPxWpV/.well-known/jwks.json
+JWKS_URI=https://cognito-idp.us-east-1.amazonaws.com/us-east-1_U5Zsm3Kwa/.well-known/jwks.json
