--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "sprint0-app",
   "version": "1.0.0",
+  "type": "module",
   "private": true,
   "scripts": {
     "dev": "next dev -p 3000",
